--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="calculator">
+        <div class="display">
+            0
+        </div>
+        <div class="operators">
+            <div class="numeric keys">
+                <button class="numkey">0</button>
+                <button class="numkey">1</button>
+                <button class="numkey">2</button>
+                <button class="numkey">3</button>
+                <button class="numkey">4</button>
+                <button class="numkey">5</button>
+                <button class="numkey">6</button>
+                <button class="numkey">7</button>
+                <button class="numkey">8</button>
+                <button class="numkey">9</button>
+            </div>
+            <div class="operators">
+                <button class="add">+</button>
+                <button class="sub">-</button>
+                <button class="multi">*</button>
+                <button class="divide">/</button>
+                <button class="equal">=</button>
+            </div>
+        </div>   
+    </div>
 </body>
 </html>
