numeric keys and equal are no working, having wired them using js

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display">
-            0
-        </div>
+        <div class="display">0</div>
         <div class="operators">
-            <div class="numeric keys">
+            <div class="numeric-keys">
                 <button class="numkey">0</button>
                 <button class="numkey">1</button>
                 <button class="numkey">2</button>
@@ -30,8 +28,11 @@
                 <button class="multi">*</button>
                 <button class="divide">/</button>
                 <button class="equal">=</button>
+                <button class="clear">AC</button>
             </div>
         </div>   
     </div>
+    <script src="func.js">
+    </script>
 </body>
 </html>
