modify to store the operators and operand

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <button class="numkey">9</button>
             </div>
             <div class="operators">
-                <button class="add">+</button>
-                <button class="sub">-</button>
-                <button class="multi">*</button>
-                <button class="divide">/</button>
+                <button class="op">+</button>
+                <button class="op">-</button>
+                <button class="op">*</button>
+                <button class="op">/</button>
                 <button class="equal">=</button>
                 <button class="clear">AC</button>
             </div>
