backspace function is now added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <button class="op">/</button>
                 <button class="equal">=</button>
                 <button class="clear">AC</button>
+                <button class="backspace">BackSpace</button>
             </div>
         </div>   
     </div>
