setup some basic css, refine those more

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button class="numkey">8</button>
                 <button class="numkey">9</button>
             </div>
-            <div class="operators">
+            <div class="operations">
                 <button class="op">+</button>
                 <button class="op">-</button>
                 <button class="op">*</button>
