fine tuning some details and some final changes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1>Caluculator</h1>
     <div class="calculator">
         <div class="display">0</div>
         <div class="operators">
@@ -27,11 +31,11 @@
                 <button class="op">-</button>
                 <button class="op">*</button>
                 <button class="op">/</button>
-                <button class="equal">=</button>
-                <button class="clear">AC</button>
-                <button class="backspace">BackSpace</button>
+                <button class="equal">=</button> 
+        <button class="clear">AC</button>
+        <button class="backspace">BackSpace</button>
             </div>
-        </div>   
+        </div>  
     </div>
     <script src="func.js">
     </script>
